appId: com.fabiofiorita.porcelain.dev
name: Inspect isolated native HTML
---
- runFlow: connect.yaml
- runFlow:
    file: open-link.yaml
    env:
      LINK: ${PREVIEW_URL}
- assertVisible: Isolated HTML
- assertVisible: Scripts are disabled
- assertNotVisible: SCRIPT EXECUTED
- tapOn: Documentation link
- assertVisible: 'Link: https://docs.expo.dev/'
- assertVisible: Scripts are disabled
- assertNotVisible: SCRIPT EXECUTED
